<resources>
    <string name="app_name">seani</string>
    <string name="title_activity_beranda">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Sewa</string>
    <string name="title_notifications">Status</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="no_telfon">No Telfon</string>
    <string name="alamat">Alamat</string>
    <string name="batal">BATAL</string>
    <string name="save">SAVE</string>
    <string name="stok">Stok</string>
    <string name="harga">Harga</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="alat">Alat</string>
    <string name="editnama">editnama</string>
    <string name="editstok">Editstok</string>
    <string name="editharga">Editharga</string>
    <string name="editdeskripsi">Editdeskripsi</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="layanan">LAYANAN</string>
    <string name="title_sewa">Sewa</string>
    <string name="combinne_ukuran_besar">COMBINNE Ukuran Besar</string>
    <string name="akun">Akun</string>
    <string name="des">Traktor adalah kendaraan yang didesain secara spesifik untuk keperluan traksi tinggi</string>
    <string name="checkout">CheckOut</string>
    <string name="proses">Proses</string>
    <string name="info">Info</string>
    <string name="keranjang">Keranjang</string>
    <string name="load">sedang mencari akun ada</string>

    <string name="accept">Setuju</string>
    <string name="jadwal_ulang">Jadwal Ulang</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="idSewa">Tr-091220-1</string>
    <string name="total">100.000</string>
    <string name="S_K">Syarat dan Ketentuan</string>
    <string name="KP">Kebijakan dan Privasi</string>
    <string name="profil">Profil</string>
    <string name="versi">Versi 1.0.0</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="detail_sewa">Detail Sewa</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="title_total">Total</string>
    <string name="submit">Submit</string>
    <string name="masukkan_luas_lahan">Masukkan Luas Lahan</string>
</resources>