<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#749d0d">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/Theme.Seani"
        android:elevation="4dp"
        tools:ignore="MissingConstraints">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/jadwal_ulang"
            android:textColor="@color/white"
            android:layout_marginLeft="20dp"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="650dp"
            android:background="@drawable/bagroundputihawal"
            app:layout_constraintTop_toBottomOf="@+id/my_toolbar">


            <EditText
                android:id="@+id/edit_nama_alat"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="28dp"
                android:background="@android:drawable/editbox_background"
                android:hint="@string/nama"
                android:inputType="text"
                android:paddingLeft="20dp"
                app:layout_constraintTop_toTopOf="@id/constraintLayout3"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="20dp" />

            <EditText
                android:id="@+id/edit_stok"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:background="@android:drawable/editbox_background"
                android:hint="@string/stok"
                android:layout_marginTop="15dp"
                android:inputType="number"
                android:paddingLeft="20dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_nama_alat"
                android:layout_marginLeft="20dp" />

            <EditText
                android:id="@+id/edit_harga_alat"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:background="@android:drawable/editbox_background"
                android:hint="@string/harga"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_stok"/>

            <ImageButton
                android:id="@+id/btnEditTransaksi"
                android:layout_width="131dp"
                android:layout_height="41dp"
                android:background="@drawable/bagroundlogin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.840"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.750" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="42dp"
                android:layout_height="17dp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/btnRegister"
                app:layout_constraintEnd_toEndOf="@+id/btnRegister"
                app:layout_constraintStart_toStartOf="@+id/btnRegister"
                app:layout_constraintTop_toTopOf="@+id/btnRegister" />

            <ImageButton
                android:id="@+id/btnBatal"
                android:layout_width="131dp"
                android:layout_height="41dp"
                android:background="@drawable/bagroundlogin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.200"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.750" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:text="@string/batal"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/btnBatal"
                app:layout_constraintEnd_toEndOf="@+id/btnBatal"
                app:layout_constraintStart_toStartOf="@+id/btnBatal"
                app:layout_constraintTop_toTopOf="@+id/btnBatal" />
        </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>