<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#749d0d">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:background="@drawable/bagroundputihawal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">


        <ImageButton
            android:id="@+id/inFoto"
            android:layout_width="100dp"
            android:layout_height="130dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.040"
            tools:ignore="MissingConstraints">

        </ImageButton>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="350dp"
            android:layout_height="330dp"
            android:background="@drawable/bagroundmelingkar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.39"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.55"
            tools:ignore="MissingConstraints">


            <EditText
                android:id="@+id/inAlat"
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:hint="@string/nama"
                android:inputType="text"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.050">

            </EditText>

            <EditText
                android:id="@+id/inStok"
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:hint="@string/stok"
                android:inputType="number"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.220">

            </EditText>

            <EditText
                android:id="@+id/inHarga"
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:hint="@string/harga"
                android:inputType="number"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.390">

            </EditText>

            <EditText
                android:id="@+id/inDeskripsi"
                android:inputType="text"
                android:layout_width="330dp"
                android:layout_height="130dp"
                android:background="@drawable/bagroundkotakputih1"
                android:hint="@string/deskripsi"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.800" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageButton
            android:id="@+id/btnBatalAlat"
            android:layout_width="131dp"
            android:layout_height="41dp"
            android:background="@drawable/bagroundlogin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.170"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.900" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="50dp"
            android:layout_height="20dp"
            android:text="@string/batal"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btnBatalAlat"
            app:layout_constraintEnd_toEndOf="@+id/btnBatalAlat"
            app:layout_constraintStart_toStartOf="@+id/btnBatalAlat"
            app:layout_constraintTop_toTopOf="@+id/btnBatalAlat" />

        <ImageButton
            android:id="@+id/btnSaveAlat"
            android:layout_width="131dp"
            android:layout_height="41dp"
            android:background="@drawable/bagroundlogin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.850"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.900" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="42dp"
            android:layout_height="17dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btnSaveAlat"
            app:layout_constraintEnd_toEndOf="@+id/btnSaveAlat"
            app:layout_constraintStart_toStartOf="@+id/btnSaveAlat"
            app:layout_constraintTop_toTopOf="@+id/btnSaveAlat" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>