<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/Theme.Seani"
        android:elevation="4dp"
        tools:ignore="MissingConstraints">
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/info"
            android:textColor="@color/white"/>
        <ImageButton
            android:id="@+id/iconSignOut"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/white"
            android:background="@drawable/ic_baseline_exit_to_app_24"
            android:layout_marginLeft="270dp"/>
    </androidx.appcompat.widget.Toolbar>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bagroundputihawal"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar">

        <androidx.cardview.widget.CardView
            android:id="@+id/Profil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/shape_corner_white"
            app:cardCornerRadius="20dp"
            tools:ignore="MissingConstraints">
            <ImageButton
                android:id="@+id/fotoUser"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginRight="25dp"
                android:background="@color/white"
                android:scaleType="fitCenter"
                android:outlineAmbientShadowColor="#D0D0D0"
                android:src="@drawable/ic_account_circle_black_24dp" />
            <TextView

                android:id="@+id/namaUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:layout_marginLeft="160dp"
                android:text="@string/profil"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/tentangkami"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintTop_toBottomOf="@+id/Profil"
            android:background="@drawable/shape_corner_white"
            app:cardCornerRadius="20dp"
            tools:ignore="MissingConstraints">
            <ImageButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginRight="25dp"
                android:background="@color/white"
                android:outlineAmbientShadowColor="#D0D0D0"
                android:src="@drawable/ic_baseline_business_center_24" />
            <ImageButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="1dp"
                android:background="@color/white"
                android:outlineAmbientShadowColor="#D0D0D0"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:layout_marginLeft="60dp"
                android:text="@string/tentang_kami"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/SK"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/tentangkami"
            android:layout_marginBottom="5dp"
            android:background="@drawable/shape_corner_white"
            app:cardCornerRadius="20dp"
            tools:ignore="MissingConstraints">
            <ImageButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginRight="25dp"
                android:background="@color/white"
                android:outlineAmbientShadowColor="#D0D0D0"
                android:src="@drawable/ic_baseline_article_24" />
            <ImageButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="1dp"
                android:background="@color/white"
                android:outlineAmbientShadowColor="#D0D0D0"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:layout_marginLeft="60dp"
                android:text="@string/S_K"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/KP"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/SK"
            android:background="@drawable/shape_corner_white"
            app:cardCornerRadius="20dp"
            tools:ignore="MissingConstraints">
            <ImageButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginRight="25dp"
                android:background="@color/white"
                android:outlineAmbientShadowColor="#D0D0D0"
                android:src="@drawable/ic_baseline_privacy_tip_24" />
            <ImageButton
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="1dp"
                android:background="@color/white"
                android:outlineAmbientShadowColor="#D0D0D0"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:layout_marginLeft="60dp"
                android:text="@string/KP"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/versi"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="132dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>