<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PesananActivity"
    android:background="@color/colorPrimary">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/Theme.Seani"
        android:elevation="4dp"
        tools:ignore="MissingConstraints">
        <ImageButton
            android:id="@+id/icon_back_pesanan"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:backgroundTint="@color/white"
            android:layout_marginRight="10dp"
            android:background="@drawable/ic_baseline_arrow_back_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/checkout"
            android:textColor="@color/white"
            android:layout_marginLeft="20dp"/>

    </androidx.appcompat.widget.Toolbar>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:background="@drawable/bagroundputihawal"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">
        <CalendarView
            android:id="@+id/tglSewa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:layout_marginTop="330dp"
            app:layout_constraintTop_toBottomOf="@+id/tglSewa">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



                <TextView
                    android:id="@+id/id_alat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/deskripsi"
                    android:textSize="35sp"
                    app:layout_constraintTop_toBottomOf="@+id/tglSewa" />

                <TextView
                    android:id="@+id/id_alat2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/detail_sewa"
                    android:textSize="35sp"
                    app:layout_constraintTop_toBottomOf="@+id/id_alat" />

                <TextView
                    android:id="@+id/id_alat3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/detail_sewa"
                    android:textSize="35sp"
                    app:layout_constraintTop_toBottomOf="@+id/id_alat2" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>